script/test/error/misplaced-define.jly

(define make-num-seq
  (lambda [n]
    (if (> n 10)
      (define y (lambda [n] (fn n)))
      (cons n (make-num-seq (y n))))))

